add_subdirectory("shutdown")
add_subdirectory("power")
add_subdirectory("sound")
add_subdirectory("display")
add_subdirectory("media")
add_subdirectory("pluginmanager")
add_subdirectory("keyboard-layout")
add_subdirectory("onboard")
add_subdirectory("overlay-warning")
add_subdirectory("bluetooth")
add_subdirectory("airplane-mode")
add_subdirectory("notification")
add_subdirectory("deepin-screen-recorder")
add_subdirectory("dde-network-core")
